[gd_scene load_steps=5 format=3 uid="uid://b6ab04h32aky1"]

[ext_resource type="Script" path="res://Scripts/player_gui.gd" id="1_fenuy"]
[ext_resource type="Texture2D" uid="uid://bvcrt6eyoaao0" path="res://Assets/HUD/boresight.png" id="2_klokj"]
[ext_resource type="Texture2D" uid="uid://do6oxty8hgux2" path="res://Assets/HUD/velocity_marker.png" id="3_sll57"]
[ext_resource type="Script" path="res://Scripts/draw3d.gd" id="4_4dnbk"]

[node name="GuiAnchor" type="Node3D" node_paths=PackedStringArray("player_ship")]
script = ExtResource("1_fenuy")
player_ship = NodePath("")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HudCenter" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="Boresight" type="Sprite2D" parent="CanvasLayer/HudCenter"]
modulate = Color(0.45098, 1, 0.556863, 0.686275)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_klokj")

[node name="VelocityMarker" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="VelocityMarker" type="Sprite2D" parent="CanvasLayer/VelocityMarker"]
modulate = Color(0.45098, 1, 0.556863, 0.686275)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_sll57")

[node name="NavArrowPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)

[node name="Overlay" type="CanvasLayer" parent="NavArrowPoint"]

[node name="Draw3d" type="Control" parent="NavArrowPoint/Overlay" node_paths=PackedStringArray("camera")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_4dnbk")
camera = NodePath("")
